Fixed Kitsu Search, & Messed with Material 3 Themes?

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
             android:name=".anime.ExoplayerView"
             android:configChanges="orientation|screenSize|layoutDirection"
             android:keepScreenOn="true"
+            android:exported="true"
+            android:theme="@style/Theme.Saikou.Exoplayer"
              />
         <activity
             android:name=".anilist.Login"
