--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "ani.saikou"
         minSdk 23
         targetSdk 31
-        versionCode 11
-        versionName "1.0.10.1"
+        versionCode 12
+        versionName "1.0.10.2"
     }
 
     buildTypes {
@@ -60,4 +60,5 @@ dependencies {
     implementation 'com.alexvasilkov:gesture-views:2.8.3'
     implementation "io.noties.markwon:core:4.6.2"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
